Changelog
=========

4.3.0b3 (unreleased)
--------------------

- Nothing changed yet.


4.3.0b2 (2014-06-19)
--------------------

- Fix javascript order though GS.
  [montypie]


4.3.0b1 (2014-06-19)
--------------------

- Add image2 plugin and its dependencies.
  [gotcha]

- Add image2_alignClasses and image2_captionedClass setting to setup
  image2 plugin.
  [gotcha]

- Updated to CKeditor 4.4.1.
  [gotcha]

- Add removePlugins option to control panel to allow to deactivate plugins.
  [gotcha]

4.2.0 (2014-06-05)
------------------

- Show actual url in link dialog besides resolveuid.
  [gotcha]


4.1.1 (2014-03-27)
------------------

- Fix upgrade steps to avoid overwriting custom configuration.
  [gotcha]

- Updated to CKeditor 4.3.4
  [gotcha]


4.1 (2014-03-27)
----------------

- Expand setup of Advanced Content filter (ACF).
  [spereverde, gotcha]


4.0.0 (2014-02-05)
------------------

- Updated to CKeditor 4.3.2
  [gotcha]

- Add extraAllowedContent option to setup filter rules.
  [gotcha]

- Backward compatibility of toolbar settings
  [gotcha]

- Moved to CKeditor 4.2.3
  [gbastien]


3.6.12 (2013-09-05)
-------------------

- Make it possible to enable/disable SCAYT by default
  [gbastien]

3.6.11 (2013-05-30)
-------------------

- Stay compatible with IE<9, do not use indexOf in JS
  [gbastien]

3.6.10 (2013-05-30)
-------------------

- Updated ckeditor to 3.6.6.1
  [vincentfretin]

- travis setup / buildout infra
  [kiorky]

3.6.9 (2013-05-29)
------------------

- Works under Plone 4.3.
  [thomasdesvenain]


3.6.8 (2012-12-13)
------------------

- Update install and uninstall to change the default_editor site
  property instead of the wysiwyg_editor memberdata property.
  [maurits]

- Also check the default_editor site property when determining whether
  the member wants to use CKeditor.
  [maurits]

- Changed the way external plugins are registered. It's better to use the three