@@ -80,3 +80,13 @@ def up4300(context):
             'image2_captionedClass',
             "image",
             'string')
+
+
+def up4310(context):
+    ptool = getToolByName(context, 'portal_properties')
+    props = ptool.ckeditor_properties
+    if not props.hasProperty('disallowedContent'):
+        props.manage_addProperty(
+            'disallowedContent',
+            '/* set disallowedContent rules Example: \'h1 style\'*/\n',
+            'text')
